# ros-task

./: CONTROLLER_IMPROVEMENTS.md  STAGED_CONTROLLER_VERIFICATION.md
scripts/: plot_staged_controller.py  test_controller.sh  test_controller_only.sh
scripts/deploy/: app.sh
workspace/limo_control/: CMakeLists.txt  README.md
workspace/limo_control/launch/: limo_control.launch.py  limo_control_headless.launch.py
workspace/limo_control/src/: p_controller.cpp
workspace/limo_simulation/launch/: limo_headless.launch.py
